<resources>
    <string name="app_name">ramzArz</string>
    <string name="title_favorite">علاقه مندی ها</string>
    <string name="title_token">لیست توکن ها</string>
    <string name="favorite_screen">not adding to your favorite Token yet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_image">btn image</string>
    <string name="month_range_title">درصد تغییرات ماهانه</string>
    <string name="year_range_title">درصد تغییرات سالانه</string>
    <string name="day_range_title">درصد تغییرات روزانه</string>
    <string name="today_dollar"> "%.2f"  dollar</string>
    <string name="range_per_dominance"> ("%.2f"%%)</string>
    <string name="price_bazar">%s B</string>
    <string name="range">+"%.2f"%%</string>
    <string name="range_main">(+"%.2f"%%)</string>
    <string name="range_neg"> "%.2f"%%</string>
    <string name="range_neg_main">( "%.2f"%%)</string>

</resources>