<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.details.DetailsFragment">

    <ImageView
        android:id="@+id/iv_btn"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:src="@drawable/down"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/btn_image"
        android:padding="@dimen/_10sdp"/>
    <TextView
        android:id="@+id/tv_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/_20sdp"

        android:textColor="@color/black"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rectungle_shape"
        android:orientation="vertical"
        android:layout_margin="@dimen/_10sdp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_bazar_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:padding="@dimen/_10sdp"
                android:text="@string/price_bazar"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:padding="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:layout_alignParentRight="true"
                android:text="ارزش بازار (دلار) "
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold"
                android:textColor="@color/black" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_dollar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00.00$"
                android:textSize="@dimen/_15sdp"
                android:layout_alignParentLeft="true"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:padding="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:layout_alignParentRight="true"
                android:text="قیمت (دلار) "
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold"
                android:textColor="@color/black" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_toman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00.00$"
                android:textSize="@dimen/_15sdp"
                android:layout_alignParentLeft="true"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:padding="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:layout_alignParentRight="true"
                android:text="قیمت (تومان) "
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold"
                android:textColor="@color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_range_day"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/up" />

            <TextView
                android:id="@+id/tv_range_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/iv_range_day"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:padding="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:layout_alignParentRight="true"
                android:text="@string/day_range_title"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold"
                android:textColor="@color/black" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_range_week"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/up" />

            <TextView
                android:id="@+id/tv_range_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/iv_range_week"
                android:text="@string/range"
                android:textColor="#4CAF50"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:padding="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:layout_alignParentRight="true"
                android:text="@string/week_range_title"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold"
                android:textColor="@color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_range_month"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/up" />

            <TextView
                android:id="@+id/tv_range_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/iv_range_month"
                android:text="@string/range"
                android:textColor="#4CAF50"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:padding="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:layout_alignParentRight="true"
                android:text="@string/month_range_title"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold"
                android:textColor="@color/black" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>

